--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
+baseURL = "http://frontfabi.com.br/"
+languageCode = "pt-br"
 title = "{front | Fabi}"
 theme= "ananke" 
