--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "http://frontfabi.com.br/"
 languageCode = "pt-br"
-title = "{front | Fabi}"
+title = "{front | Fabi} => Front-End Developer | PerifaCoder"
 theme= "fronthub" 
