[FIX] organizaçao do layout e inclusao de midias sociais

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
 baseURL = "http://frontfabi.com.br/"
 languageCode = "pt"
 title = "{front | Fabi}"
-isMultilingual = true
 theme= "zen" 
+description = "The blah blah site"
 [params]
   mainSections = ["posts"] 
+  isMultilingual = true
