--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 ---
-title: "Hugo Zen theme"
-baseURL: "https://example.org/"
+title: "{front | Fabi}"
+baseURL: "http://frontfabi.com.br/"
 theme: "zen"
 languageCode: "pt"
 defaultContentLanguage: "pt"
@@ -10,8 +10,8 @@ paginate: 10
 paginatePath: "page"
 rssLimit: 20
 author:
-  name: "Your Name"
-  url: "https://example.org/somepage"
+  name: "Fabi"
+  url: "https://frontfabi.com.br/"
   avatar: "path/to/some-image.jpg"
 
 outputs:
@@ -19,20 +19,19 @@ outputs:
   section: ["HTML","RSS", "JSON"]
 
 params:
-  contact: "info@example.org"
-  copyright: "<!--Creative Commons License-->This site is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License](https://creativecommons.org/licenses/by-sa/4.0/).<!--/Creative Commons License-->"
-  description: "The zen theme for Hugo example site."
+  contact: "frontfabi@gmail.com"
+  description: "Desenvolvedora, mentora e palestrante."
   dateformat: "2 January, 2006"
   favicon: "icon-64.png"
   feedlinks: true
-  footer: "Powered by [Hugo](https://gohugo.io/) and the [Zen theme](https://github.com/frjo/hugo-theme-zen)."
+  footer: "Feito com [Hugo](https://gohugo.io/)."
   icon: "apple-touch-icon-180.png"
   image: "apple-touch-icon-180.png"
   imageMaxWidth: 400
   jquery: true
   mobileMenu: true
   poweredby: false
-  search: false
+  search: true
   searchSize: 20
   sidebar: true
   submitted: true
